k8s/auth/deployment.yml
# Kubernetes API version
apiVersion: apps/v1
# Deployment object
kind: Deployment
metadata:
  # The name of the Deployment
  name: auth
  labels:
    app: welhome
    micro-service: auth
  namespace: ns-welhome
spec:
  # Replicas for this Deployment
  replicas: 1
  selector:
    # labels the pods
    matchLabels:
      app: welhome
      micro-service: auth
  template:
    metadata:
      labels:
        # The label the pods created from the pod template should have
        app: welhome
        micro-service: auth
    spec:
      containers:
        # The container name to execute pods
        - name: auth
          image: afkbeto/welhome-auth:1.0.6
          ports:
            # Assign ports to expose container
            - containerPort: 9999
