k8s/auth/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: ns-welhome
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ns-welhome-auth-stripprefix@kubernetescrd
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - kube.minhviet.cc
      secretName: welhome-certificate
  rules:
    - host: kube.minhviet.cc
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 9999
